// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BankPanel /> Else 1`] = `
<div>
  <div
    className="panel-bank"
    style={Object {}}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="grid-bank"
      >
        <button
          className="btn btn-large bank-btn "
          id="channel-1"
          key="1"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-1"
            >
              1: 
              Ch A
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn "
          id="channel-2"
          key="2"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-2"
            >
              2: 
              Channel 2
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn "
          id="channel-3"
          key="3"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-3"
            >
              3: 
              Ch 3
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn "
          id="channel-4"
          key="4"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-4"
            >
              4: 
              Ch 4
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn "
          id="channel-5"
          key="5"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-5"
            >
              5: 
              Ch 5
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn "
          id="channel-6"
          key="6"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-6"
            >
              6: 
              Ch 6
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn "
          id="channel-7"
          key="7"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-7"
            >
              7: 
              Ch 7
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn "
          id="channel-8"
          key="8"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-8"
            >
              8: 
              Ch 8
            </u>
          </p>
        </button>
      </div>
      <div
        className="btn btn-large btn-clean "
      >
        Clean
      </div>
    </div>
  </div>
</div>
`;

exports[`<BankPanel /> Renders correctly 1`] = `
<div>
  <div
    className="panel-bank"
    style={
      Object {
        "backgroundColor": "#e4e4e4",
        "color": "#424242",
      }
    }
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="grid-bank"
      >
        <button
          className="btn btn-large bank-btn btn-ready"
          id="channel-1"
          key="1"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-1"
            >
              1: 
              Ch. 1
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-inverse-2 disabled btn-bold"
          id="channel-2"
          key="2"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-2"
            >
              2: 
              Ch. 2
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-ready"
          disabled={false}
          id="channel-3"
          key="3"
          onClick={[Function]}
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-3"
            >
              3: 
              Ch. 3
               
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-inverse-2 disabled btn-bold"
          id="channel-4"
          key="4"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-4"
            >
              4: 
              Ch. 4
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-ready"
          id="channel-5"
          key="5"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-5"
            >
              5: 
              Ch. 5
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-inverse-2 disabled btn-bold"
          id="channel-6"
          key="6"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-6"
            >
              6: 
              Ch. 6
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-ready"
          id="channel-7"
          key="7"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-7"
            >
              7: 
              Ch. 7
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-inverse-2 disabled btn-bold"
          id="channel-8"
          key="8"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-8"
            >
              8: 
              Ch. 8
            </u>
          </p>
        </button>
      </div>
      <button
        className="btn btn-large btn-clean btn-ready"
        id="clean"
        onClick={[Function]}
      >
        Clean
      </button>
    </div>
  </div>
</div>
`;

exports[`<BankPanel /> Test Clean Button inactive 1`] = `
<div>
  <div
    className="panel-bank"
    style={
      Object {
        "backgroundColor": "#e4e4e4",
        "color": "#424242",
      }
    }
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="grid-bank"
      >
        <button
          className="btn btn-large bank-btn btn-ready"
          id="channel-1"
          key="1"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-1"
            >
              1: 
              Ch A
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-inverse-2 disabled"
          id="channel-2"
          key="2"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-2"
            >
              2: 
              Channel 2
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-ready"
          disabled={false}
          id="channel-3"
          key="3"
          onClick={[Function]}
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-3"
            >
              3: 
              Ch 3
               
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-inverse-2 disabled"
          id="channel-4"
          key="4"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-4"
            >
              4: 
              Ch 4
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-ready"
          id="channel-5"
          key="5"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-5"
            >
              5: 
              Ch 5
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-inverse-2 disabled"
          id="channel-6"
          key="6"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-6"
            >
              6: 
              Ch 6
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-ready"
          id="channel-7"
          key="7"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-7"
            >
              7: 
              Ch 7
            </u>
          </p>
        </button>
        <button
          className="btn btn-large bank-btn btn-inverse-2 disabled"
          id="channel-8"
          key="8"
          style={
            Object {
              "color": "black",
            }
          }
        >
          <p
            className="chn-label"
          >
            <u
              className="chn-name-8"
            >
              8: 
              Ch 8
            </u>
          </p>
        </button>
      </div>
      <div
        className="btn btn-large btn-clean btn-inverse-2 disabled"
      >
        Clean
      </div>
    </div>
  </div>
</div>
`;
